--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # build output
 dist/
+
 # generated types
 .astro/
+.netlify
+.vscode/
+
 
 # dependencies
 node_modules/
@@ -15,8 +19,6 @@ pnpm-debug.log*
 # pages
 src/pages/csstest.astro
 src/pages/rss.xml.js
-
-
 
 # environment variables
 .env
