--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/vercel": "^8.1.3",
     "@tailwindcss/vite": "^4.1.3",
+    "@tinacms/auth": "^1.0.12",
+    "@tinacms/graphql": "^1.5.16",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.6.1",
