--- a/package.json
+++ b/package.json
@@ -2,40 +2,46 @@
   "name": "forrodacapita-02",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@10.8.1",
   "scripts": {
-    "dev": "tinacms dev -c \"astro dev\"",
-    "build": "astro build",
+    "dev": "tinacms server:start --command \"astro dev\"",
+    "build": "tinacms build && npx build",
+    "start": "tinacms build && npx start",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.3",
-    "@astrojs/netlify": "^6.3.0",
-    "@astrojs/react": "^4.2.3",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
-    "@astrojs/vercel": "^8.1.3",
     "@tailwindcss/vite": "^4.1.3",
-    "@tinacms/auth": "^1.0.12",
-    "@tinacms/graphql": "^1.5.16",
+    "@tinacms/graphql": "^1.1.0",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
-    "astro": "^5.6.1",
+    "astro": "^5.7.2",
+    "express": "^5.1.0",
     "marked": "^15.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
-    "tailwindcss": "^4.1.3",
     "tinacms": "^2.7.5",
     "unified": "^11.0.5"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.2.4",
     "@tailwindcss/typography": "^0.5.16",
-    "@tinacms/cli": "^1.9.5",
-    "@types/node": "^22.14.1"
+    "@tinacms/cli": "^0.60.5",
+    "@types/node": "^22.14.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3"
+  },
+  "volta": {
+    "node": "18.20.8"
   }
 }
